# RecallGuard-AI

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: README.md
docs/: ATS_Judge_Scorecard.md  Azure_CLI_Setup_Evidence.md  Build_Report_Draft.md  CopilotKit_V2_Integration.md  Decision_Audit_and_Evaluation.md  Foundry_Expert_Audit.md  Foundry_Final_Activity_Checklist.md  Foundry_Live_Validation_Summary.md  Foundry_Portal_Runbook.md  Local_Demo_Server.md  Portfolio_Product_Strategy.md  Public_Data_Dataset_Evidence.md  RecallGuard_AI_PRD.md  Submission_Package_Guide_KO.md
final/: Foundry_Live_Validation_Summary.md  RecallGuard_AI_Build_Report_Somi.docx  RecallGuard_AI_Demo_Script_Somi.md  RecallGuard_AI_Foundry_Deck_Somi.pptx  RecallGuard_AI_PPT_Video_Script_Somi.md
knowledge-base/: kc_certification_review_checklist.md  product_safety_review_sop.md  recall_response_policy.md  vendor_submission_requirements.md
outputs/: ats_requirement_matrix.json  foundry_agent_setup.json  foundry_guardrail_deployment_evidence.json  foundry_live_implementation_summary.json  foundry_live_implementation_summary_public_data.json  knowledge_agent_test_response.json  task_agent_recall_test_response.json  task_agent_v2_create_response.json  task_agent_v2_recall_test_response.json  task_agent_v3_create_response.json  task_agent_v3_missing_test_response.json  task_agent_v3_prompt_injection_test_response.json  task_agent_v3_recall_test_response.json  task_agent_v4_create_response.json  task_agent_v4_prompt_injection_test_response.json  (+11 more)
(+73 files in other folders)
