[project]
name = "recallguard-ai"
version = "0.1.0"
description = "Governed multi-agent compliance evidence checker for Microsoft Foundry"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
